# uni-projects

artificial-intelligence/fuzzy-logic-target-finder/: MTRN4010_4_B.m  MTRN4010_4_B2.m  MTRN4010_ang2.fis  MTRN4010_ang3.fis  MTRN4010_ang4.fis  MTRN4010_vel2.fis
artificial-intelligence/game-solver-ai/: .project  README.md
artificial-intelligence/genetic-algorithm-path-planner/: MTRN4010_4_A.m
artificial-intelligence/pso-car-target-finder/: MTRN4010_4_C.m
computer-vision/: task1.ipynb
computer-vision/pedestrian-tracking/: .gitignore  README.md  detection-tracking.ipynb  extracting_bg.ipynb  mean-shift.ipynb  motion_tracking2.py  yolo.ipynb
oop/reservation-handler/: Reservation.java  ReservationHandler.java  Room.java  Venue.java  VenueHireSystem.java  input1.txt  input2.txt  input3.txt  output1.txt  output2.txt  output3.txt
oop/trip-planner/: 0.txt  1.txt  2.txt  example-input.txt  input.txt  myinput1.txt  output-10-cities-09-trips-testcase-080.txt
operating-systems/root/: .gdbinit  kernel-ASST0  kernel-ASST1  kernel-ASST2  kernel-ASST3  outfile  output  output.txt
optimisation/Exercise2/: Copy_of_task5.m  task2.m  task3.m  task4.m  task5.m  task5.xlsx
optimisation/Exercise3/: NWC.m  det44.m  t1test.m  task1a.m  task1b.m  task2a.m  task4c.m  task4c_simulink.slx  task4c_simulink.slxc
optimisation/Exercise4/: AntColony_MultiObj.m  Copy_of_task4.m  GeneticAlgorithm.m  Metaheuristics.m  ParticleSwarm.m  intgrl.m  task1.m  task2.m  task2test.m  task3.m  task4.m  test.m
robotics/autonomous-robot-maze-solver/: .gitignore  .gitmodules  README.md
robotics/autonomous-robot-maze-solver/vision/: .gitignore  CMakeLists.txt  README.md
robotics/autonomous-robot-maze-solver/vision/calib_data/: camera_params_charuco_0.xml  camera_params_charuco_1.xml  camera_params_charuco_2.xml  maze_cameraParameters_1900_0.xml  maze_cameraParameters_1900_1.xml  maze_cameraParameters_1900_2.xml  maze_cameraParameters_1900_3.xml  maze_cameraParameters_charuco.xml
robotics/autonomous-robot-maze-solver/vision/calib_data/640_480_data/: maze_camera_params_07_16_0.xml  maze_camera_params_07_16_1.xml  maze_camera_params_07_16_2.xml
robotics/autonomous-robot-maze-solver/vision/calib_data/bad_maze_calib_data/: cameraParameters_maze_2.xml  cameraParameters_maze_3.xml  cameraParameters_maze_4.xml
robotics/autonomous-robot-maze-solver/vision/include/: aruko_generator.h  aruko_localiser.h  camera_parameters.h  camera_parameters_home.h  camera_parameters_lab.h  line_extractor.h  math_utils.h  maze.h  maze_template.h  maze_view.h  pose_stamped.h  robot_interface.h
robotics/autonomous-robot-maze-solver/vision/src/: aruko_generator.cpp  aruko_generator_main.cpp  aruko_localiser.cpp  aruko_localiser_test.cpp  calibrate_camera_charuco.cpp  image_capture_test.cpp  line_extractor.cpp  line_extractor_test.cpp  math_utils.cpp  maze.cpp  maze_template.cpp  maze_view.cpp  phase_b_test.cpp  robot_interface.cpp  robot_interface_test.cpp
robotics/autonomous-simulated-navigation/: MTRN2500-Assign2.sln
robotics/landmark-extraction-ugv-localisation/: Project2.m
robotics/object-detection/: API_Help3d.p  ExampleUsefulM01.m  M01.m
robotics/pc104-interface-package/: DAC06.cpp  DAC06.h  IOPermException.h  MSIP404.cpp  MSIP404.h  PCM3718.cpp  PCM3718.h  main.cpp
thesis-coronary-artery-detect-cnn/: README.txt  cnn-train.py  csv-to-beat-image.py  image-filtering.py
(+291 files in other folders)
